# freedeck-configurator-companion

./: CMakeLists.txt  Cargo.toml  build.rs  icons.rc  main.cpp  readme.md
.github/workflows/: main.yml
scripts/: linux.sh
src/: main.rs
src/lib/: system_info.rs
src/router/: cors.rs  current_window.rs
