[package]
name = "freedeck-companion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.23.13"
rouille = "3.5.0"
tray-item = "0.7.0"

[build-dependencies]
windres = "0.2.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.15.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }